--- a/my-blog/src/main/resources/templates/fragments/header.html
+++ b/my-blog/src/main/resources/templates/fragments/header.html
@@ -77,6 +77,7 @@
                 text-align: center;
                 line-height: 30px;
                 cursor: pointer;
+                user-select: none;
             }
             .operate-button:hover {
                 background-color: #d3e3f7;
@@ -108,7 +109,11 @@
             $(document).ready(function () {
                 $("#icon").click(function () {
                     $("#operate-panel").slideToggle(200);
-                })
+                });
+                $("#exit").click(function () {
+                    sessionStorage.clear();
+                    window.location.href="/back/login";
+                });
             });
         </script>
     </body>
